# SudokuSolver

./: .gitignore  CMakeLists.txt  ImageProcessing.cpp  ImageProcessing.h  KNN.cpp  KNN.h  KnnNumberRecogniser.cpp  KnnNumberRecogniser.h  NumberRecogniser.cpp  NumberRecogniser.h  NumberSquare.cpp  NumberSquare.h  README.md  SVM.cpp  SVM.h  SudokuBoard.cpp  SudokuBoard.h  main.cpp  sudokugui.cpp  sudokugui.h  sudokugui.ui
